--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@wordpress/components": "^12.0.6",
 		"@wordpress/data": "^4.26.6",
 		"@wordpress/data-controls": "^1.20.6",
+		"@wordpress/element": "^2.19.1",
 		"@wordpress/i18n": "^3.18.0",
 		"@wordpress/icons": "^2.9.1"
 	},
@@ -15,7 +16,6 @@
 		"@babel/core": "^7.12.16",
 		"@babel/plugin-proposal-class-properties": "^7.12.13",
 		"@wordpress/babel-preset-default": "^5.0.1",
-		"@wordpress/base-styles": "^3.3.3",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.0.2",
 		"mini-css-extract-plugin": "^1.3.6",
